--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.7.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.7.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
